--- a/sTutor/app/build.gradle
+++ b/sTutor/app/build.gradle
@@ -26,13 +26,16 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.firebase:firebase-auth:11.0.4'
     implementation 'com.github.florent37:materialtextfield:1.0.7'
+    implementation 'com.github.dmytrodanylyk.android-process-button:library:1.0.4'
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-core:15.0.2'
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
 
 
 apply plugin: 'com.google.gms.google-services'
